--- a/_base/templates/base.html
+++ b/_base/templates/base.html
@@ -6,7 +6,7 @@
 <head>
     <!-- common stylesheets -->
     <link rel="stylesheet" hx-preserve="true" href="{% static 'core/styles/base.css' %}?uuid={{uuid}}">
-    <link rel="stylesheet" hx-preserve="true" href="{% static 'core/styles/nav.css' %}?uuid={{uuid}}">
+    <link rel="stylesheet" hx-preserve="true" href="{% static 'core/styles/nav.css' %}">
 
     <!-- common elements -->
     <link rel="stylesheet" hx-preserve="true" href="{% static 'core/styles/elements/button-one.css' %}">
