--- a/_base/core/static/core/styles/base.css
+++ b/_base/core/static/core/styles/base.css
@@ -26,11 +26,22 @@
     --smallFontSize: .8rem;
 
     /* z-index */
-    --primaryNav: 2;
-    --sideNav: 3;
-    --navCard: 4;
-    --toggleNavCardBtn: 4;
-    --globalResponseMessage: 5;
+    --primaryNav: 10;
+    --sideNav: 11;
+    --navCard: 12;
+    --toggleNavCardBtn: 12;
+    --globalResponseMessage: 13;
+
+    --indexTwo: 2;
+    --indexThree: 3;
+    --indexFour: 4;
+    --indexFive: 5;
+    --indexSix: 6;
+    --indexSeven: 7;
+    --indexEight: 8;
+    --indexNine: 9;
+    --indexBehind: -1;
+
 
     /* heights */
     --navHeight: 4rem;
