--- a/_base/templates/home.html
+++ b/_base/templates/home.html
@@ -3,7 +3,7 @@
 
 
 {% block page_stylesheets %}
-    <link rel="stylesheet" hx-preserve="true" href="{% static 'core/styles/home/hero.css' %}">
+    <link rel="stylesheet" hx-preserve="true" href="{% static 'core/styles/home/hero.css' %}?uuid={{uuid}}">
     <link rel="stylesheet" hx-preserve="true" href="{% static 'core/styles/elements/zig-zag-checkbox.css' %}">
     <link rel="stylesheet" hx-preserve="true" href="{% static 'core/styles/elements/button-one.css' %}">
     <link rel="stylesheet" href="{% static 'core/styles/elements/nouislider.min.css' %}">
@@ -12,6 +12,9 @@
 {% block page_scripts_in_head %}
     <script defer src="{% static 'core/scripts/elements/nouislider.min.js' %}"></script>
     <script defer src="{% static 'core/scripts/elements/nouiSlider.js' %}"></script>
+
+
+    <script defer src="{% static 'core/scripts/home/hero.js' %}?uuid={{uuid}}"></script>
 {% endblock %}
 
 {% block main %}
@@ -22,7 +25,6 @@
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1418 125" fill="#356687"><path d="M1412.29 72.17c-11.04-5.78-20.07-14.33-85.46-25.24-22.37-3.63-44.69-7.56-67.07-11.04-167.11-22.06-181.65-21.24-304.94-30.56C888.78 1.39 822.57 1.1 756.44 0c-46.63-.11-93.27 1.56-139.89 2.5C365.5 13.55 452.86 7.68 277.94 23.15 202.57 33.32 127.38 45.01 52.07 55.69c-11.23 2.41-22.63 4.17-33.71 7.22C6.1 66.33 5.64 66.19 3.89 67.79c-7.99 5.78-2.98 20.14 8.72 17.5 33.99-9.47 32.28-8.57 178.06-29.66 4.26 4.48 7.29 3.38 18.42 3.11 13.19-.32 26.38-.53 39.56-1.12 53.51-3.81 106.88-9.62 160.36-13.95 18.41-1.3 36.8-3.12 55.21-4.7 23.21-1.16 46.43-2.29 69.65-3.4 120.28-2.16 85.46-3.13 234.65-1.52 23.42.99 1.57-.18 125.72 6.9 96.61 8.88 200.92 27.94 295.42 46.12 40.87 7.91 116.67 23.2 156.31 36.78 3.81 1.05 8.28-.27 10.51-3.58 3.17-3.72 2.66-9.7-.78-13.13-3.25-3.12-8.14-3.44-12.18-5.08-17.89-5.85-44.19-12.09-63.67-16.56l26.16 3.28c23.02 3.13 46.28 3.92 69.34 6.75 10.8.96 25.43 1.81 34.34-4.39 2.26-1.54 4.86-2.75 6.21-5.27 2.76-4.59 1.13-11.06-3.59-13.68ZM925.4 23.77c37.64 1.4 153.99 10.85 196.64 14.94 45.95 5.51 91.89 11.03 137.76 17.19 24.25 4.77 74.13 11.21 101.72 18.14-11.87-1.15-23.77-1.97-35.65-3.06-133.46-15.9-266.8-33.02-400.47-47.21Z"></path></svg>
     </div>
 
-
     <form
     id="order-summary-form"
     action="{% url 'get_order_summary' %}"
@@ -31,6 +33,89 @@
     @submit.prevent="if(selectedRoomTypes.length > 0) $event.target.submit(); else alert('Please select at least one room type.')"
     >
         {% csrf_token %}
+        <div class="filters-container">
+            <input
+            type="search"
+            class="school-search-field"
+            name="school-search-field"
+            id="school-search-field"
+            hx-get="{% url 'search_schools' %}"
+            hx-trigger="keyup changed delay:500ms"
+            hx-params="*"
+            hx-target="#schools-dropdown"
+            hx-swap="outerHTML"
+            hx-throttle="1000ms"
+            >
+
+            <ul id="schools-dropdown" class="schools-dropdown">
+            </ul>
+
+            <div class="filters-card">
+                <div id="regions-checkboxes">
+                    <label>
+                        <i class="fa-solid fa-location-dot"></i>
+                        <span style="color:lightslategray">Select School To See Regions</span>
+                    </label>
+                </div>
+                <div>
+                    {% for room_type in room_types %}
+                    <div
+                    style="display: flex; align-items: center; column-gap: .5rem">
+                        <input style="width: max-content" type="checkbox" name="room-type" id="{{room_type.name}}" value="{{room_type.pk}}" x-model="selectedRoomTypes">
+                        <label for="{{room_type.name}}">{{room_type.get_name_display}}</label>
+                    </div>
+                    {% endfor %}
+                </div>
+
+                <div class="price-slider">
+                    <p class="accordion-header" id="headingFive">
+                        Select Price Range
+                    </p>
+                    <div class="slider slider-keypress"></div>
+                    <div class="range-fields">
+                        <div>
+                            <label for="price">Min: &#x20A6;</label>
+
+                            <input
+                              type="text"
+                              class="price-input input-with-keypress-0"
+                              inputmode="numeric"
+                              pattern="[0-9,.]+"
+                              id="min-price"
+                              name="min-price"
+                              min="0"
+                              max="1000000"
+                              value="30000"
+                              readonly
+                            >
+
+                        </div>
+                        <div>
+                            <label for="price">Max: &#x20A6;</label>
+
+                            <input
+                            type="text"
+                            class="price-input input-with-keypress-1"
+                            inputmode="numeric"
+                            pattern="[0-9,.]+"
+                            id="max-price"
+                            name="max-price"
+                            min="0"
+                            max="1000000"
+                            value="1000000"
+                            readonly
+                            >
+
+                        </div>
+                    </div>
+                </div>
+
+                <button id="proceed-btn" disabled>proceed</button>
+            </div>
+
+        </div>
+
+        {% comment %}
         <select
         name="school"
         id="schools-dropdown"
@@ -52,67 +137,8 @@
             </label>
         </div>
 
-        <div>
-            {% for room_type in room_types %}
-            <div
-            style="display: flex; align-items: center; column-gap: .5rem">
-                <input style="width: max-content" type="checkbox" name="room-type" id="{{room_type.name}}" value="{{room_type.pk}}" x-model="selectedRoomTypes">
-                <label for="{{room_type.name}}">{{room_type.get_name_display}}</label>
-            </div>
-            {% endfor %}
-        </div>
-
-        {% comment %}
-        <div x-data="{ price: 30000 }">
-            <label for="price">Price: <span x-text="price"></span></label>
-            <input type="range" id="price" name="price" min="30000" max="1000000" step="1000" x-model="price">
-        </div>
-        {% endcomment %}
-
-        <div class="price-slider">
-            <p class="accordion-header" id="headingFive">
-                Select Price Range
-            </p>
-            <div class="slider slider-keypress"></div>
-            <div class="range-fields">
-                <div>
-                    <label for="price">Min: &#x20A6;</label>
-
-                    <input
-                      type="text"
-                      class="price-input input-with-keypress-0"
-                      inputmode="numeric"
-                      pattern="[0-9,.]+"
-                      id="min-price"
-                      name="min-price"
-                      min="0"
-                      max="1000000"
-                      value="30000"
-                      readonly
-                    >
-
-                </div>
-                <div>
-                    <label for="price">Max: &#x20A6;</label>
-
-                    <input
-                    type="text"
-                    class="price-input input-with-keypress-1"
-                    inputmode="numeric"
-                    pattern="[0-9,.]+"
-                    id="max-price"
-                    name="max-price"
-                    min="0"
-                    max="1000000"
-                    value="1000000"
-                    readonly
-                    >
-
-                </div>
-            </div>
-        </div>
-
         <button id="proceed-btn" disabled>proceed</button>
+        {% endcomment %}
     </form>
 </section>
 {% endblock %}
