--- a/_base/core/static/core/styles/base.css
+++ b/_base/core/static/core/styles/base.css
@@ -3,7 +3,7 @@
 :root {
     /* color variables */
     --primaryGreen: #4ad66d;
-    --primaryGreen: #68bb59;
+    /* --primaryGreen: #68bb59; */
     --secondaryGreen: #427e38;
     --primaryWhite: white;
     --backgroundGray: #f8f9fa;
@@ -15,6 +15,7 @@
     --middleGray: #e0e0e0;
     --oxfordBlue: #081f33;
     --primaryBlue: #356687;
+    --black: black;
 
     /* box shadows */
     --slimBoxShadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px, rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
@@ -81,9 +82,9 @@ button {
 
 /* end element resets */
 
-#root-container {
+/* #root-container {
     margin: 3rem max(1.5rem, 5vw);
-}
+} */
 
 
 /* messages */
