--- a/_base/core/static/core/styles/home/hero.css
+++ b/_base/core/static/core/styles/home/hero.css
@@ -2,8 +2,12 @@
     padding-top: 4rem;
     display: grid;
     justify-content: center;
-    text-align: center;
     row-gap: 2rem;
+
+    background-color: peachpuff;
+
+    background: url('https://upperoom.s3.amazonaws.com/assets/hero-image.png') no-repeat center;
+    background-size: cover;
 }
 
 .hero-heading-container {
@@ -15,19 +19,20 @@
 }
 
 .hero-heading-container h1 {
-    color: var(--primaryBlue);
+    color: var(--primaryWhite);
     font-size: clamp(1.5rem, 5vw + .5rem, 3.5rem);
     margin: 0;
     line-height: calc(5vw + .5rem);
     padding: 0;
+    margin-top: 3rem;
 
-    --x-offset: -0.0625em;
-  --y-offset: 0.0625em;
-  --stroke: 0.025em;
-  --background-color: white;
-  --stroke-color: lightblue;
+    /* --x-offset: -0.0625em;
+    --y-offset: 0.0625em;
+    --stroke: 0.025em;
+    --background-color: white;
+    --stroke-color: lightblue;
 
-  text-shadow:
+    text-shadow:
 
     var(--x-offset)
     var(--y-offset)
@@ -37,25 +42,16 @@
     calc( var(--x-offset) - var(--stroke) )
     calc( var(--y-offset) + var(--stroke) )
     0px
-    var(--stroke-color);
+    var(--stroke-color); */
 }
 
-.hero-heading-container h3 > span {
+.hero-heading-container h3 {
+    color: var(--primaryWhite);
+}
+
+/* .hero-heading-container h3 > span {
     color: var(--primaryGreen);
-    /* text-shadow: 0 1px 0 #f2f2f2,
-             0 2px 0 #ebebeb,
-             0 3px 0 #e6e6e6,
-             0 4px 0 #e0e0e0,
-             0 5px 0 #d9d9d9,
-             0 6px 1px rgba(0, 0, 0, 0.03),
-             0 0 5px rgba(0, 0, 0, 0.03),
-             0 1px 3px rgba(0, 0, 0, 0.1),
-             0 3px 5px rgba(0, 0, 0, 0.08),
-             0 5px 10px rgba(0, 0, 0, 0.1),
-             0 10px 10px rgba(0, 0, 0, 0.08),
-             0 20px 20px rgba(0, 0, 0, 0.05); */
-
-}
+} */
 
 .hero-heading-container svg {
     transform: scale(.5);
@@ -129,5 +125,40 @@
 .filters-card.display {
     opacity: 1;
 }
+
+/* search field design */
+.search-field-container {
+    background-color: var(--primaryWhite);
+    display: flex;
+    align-items: center;
+    column-gap: 1rem;
+    padding: 0 1rem;
+    border-radius: .3rem;
+}
+
+.search-field-container i {
+    width: max-content;
+    font-weight: bold;
+    font-size: 1.2rem;
+    background-color:var(--black);
+    padding: .5rem;
+    color: var(--primaryWhite);
+    border-radius: var(--circularBorderRadius);
+}
+
+.school-search-field {
+    padding: 1rem 1rem 1rem 0;
+    border: none;
+    outline: none;
+
+    /* background-color: antiquewhite; */
+    flex-grow: 1;
+}
+
+.school-search-field:focus {
+    outline: none;
+    border: none;
+}
+
 
 
