--- a/_base/core/static/core/styles/home/hero.css
+++ b/_base/core/static/core/styles/home/hero.css
@@ -1,13 +1,18 @@
 #hero {
     padding-top: 4rem;
-    display: grid;
-    justify-content: center;
+    display: flex;
+    flex-direction: column;
+    /* justify-content: center; */
+    align-items: center;
     row-gap: 2rem;
 
     background-color: peachpuff;
 
     background: url('https://upperoom.s3.amazonaws.com/assets/hero-image.png') no-repeat center;
     background-size: cover;
+    min-height: 80vh;
+    overflow-x: hidden;
+    padding: 4rem 1rem 2rem 1rem;
 }
 
 .hero-heading-container {
@@ -70,7 +75,7 @@
 #regions-checkboxes {
     width: max-content;
     text-align: left;
-    display: grid;
+    /* display: grid; */
     row-gap: .8rem;
     font-size: .8rem;
     max-height: 20rem;
@@ -95,11 +100,9 @@
 }
 
 .schools-dropdown {
-    outline: 2px solid slategray;
+    /* outline: 2px solid slategray; */
     position: absolute;
-    top: 2rem;
     justify-self: center;
-    z-index: var(--indexTwo);
     background-color: var(--primaryWhite);
     z-index: var(--indexBehind);
     opacity: 0;
@@ -107,23 +110,40 @@
 }
 
 .schools-dropdown.display {
+    top: 100%;
     opacity: 1;
-    z-index: var(--indexTwo);
+    z-index: var(--indexThree);
     width: 100%;
 }
 
 .schools-dropdown a {
-    border-bottom: 1px solid slategrey;
+    border-bottom: 1px solid var(--primaryWhite);
+    background-color: var(--primaryGreen);
+    color: var(--primaryWhite);
+    font-size: .8rem;
+    padding: .5rem;
 }
 
 .filters-card {
-    outline: 2px solid slategray;
     padding: 1rem .5rem;
     opacity: 0;
+    position: absolute;
+    top: 0;
+    z-index: var(--indexBehind);
+    background-color: var(--primaryWhite);
+    border-top: 2px solid gainsboro;
+    display: flex;
+    flex-direction: column;
+    row-gap: 2rem;
+    font-size: .8rem;
+    /* display: grid; */
 }
 
 .filters-card.display {
     opacity: 1;
+    z-index: var(--indexTwo);
+    top: 100%;
+    width: 100%;
 }
 
 /* search field design */
@@ -134,6 +154,7 @@
     column-gap: 1rem;
     padding: 0 1rem;
     border-radius: .3rem;
+    height: max-content;
 }
 
 .search-field-container i {
@@ -160,5 +181,75 @@
     border: none;
 }
 
+.room-types-container > div {
+    display: flex;
+    column-gap: 2rem;
+    overflow-x: auto;
+    padding: .5rem;
+}
 
+.room-types-container > div > div {
+    /* outline: 2px solid brown; */
+    box-shadow: var(--slimBoxShadow);
+    display: flex;
+    align-items: center;
+    padding: .5rem;
+    border-radius: .3rem;
+    font-size: .8rem;
+    /* background-color: var(--backgroundGray); */
+}
 
+.room-types-container > div > * > * {
+    width: max-content;
+}
+
+.noUi-connect {
+    background: var(--primaryGreen) !important;
+}
+
+.price-slider {
+    display: grid;
+    row-gap: .5rem;
+}
+
+.range-fields {
+    display: flex;
+    justify-content: space-evenly;
+    column-gap: 1rem;
+    flex-wrap: wrap;
+}
+
+.range-fields input {
+    width: max-content;
+    /* background-color: var(--backgroundGray); */
+    width: 5rem;
+    border: none;
+    /* border: 2px solid var(--black); */
+    box-shadow: var(--slimBoxShadow);
+}
+
+.regions-checkboxes {
+    /* width: max-content; */
+    text-align: left;
+    /* display: grid; */
+    row-gap: .8rem;
+    font-size: .8rem;
+    max-height: 20rem;
+    overflow-x: auto;
+}
+
+.regions-checkboxes > div {
+    display: flex;
+    column-gap: 1rem;
+    padding: 1rem;
+
+}
+
+.regions-checkboxes > div > div {
+    box-shadow: var(--slimBoxShadow);
+    padding: .5rem;
+    align-items: center;
+    padding: .5rem;
+    border-radius: .3rem;
+    font-size: .8rem;
+}
