--- a/_base/templates/pages/home/regions-search.html
+++ b/_base/templates/pages/home/regions-search.html
@@ -1,20 +1,23 @@
 {% if regions %}
-<div id="regions-checkboxes" class="checkbox-wrapper">
-    {% for region in regions %}
+<div id="regions-checkboxes" class="checkbox-wrapper regions-checkboxes">
+    <h4>Regions</h4>
     <div>
-        <input type="checkbox" id="{{region.pk}}" class="check" name="regions" value="{{ region.pk }}">
-        <label for="{{region.pk}}" class="label">
-            <svg width="25" height="25" viewBox="0 0 95 95">
-                <rect x="30" y="20" width="50" height="50" stroke="#356687" fill="none"></rect>
-                <g transform="translate(0,-952.36222)">
-                    <path d="m 56,963 c -102,122 6,9 7,9 17,-5 -66,69 -38,52 122,-77 -7,14 18,4 29,-11 45,-43 23,-4" stroke="royalblue" stroke-width="3" fill="none" class="path1"></path>
-                </g>
-            </svg>
-            <span>{{ region.name }}</span>
-        </label>
+        {% for region in regions %}
+        <div>
+            <input type="checkbox" id="{{region.pk}}" class="check" name="regions" value="{{ region.pk }}">
+            <label for="{{region.pk}}" class="label">
+                <svg width="25" height="25" viewBox="0 0 95 95">
+                    <rect x="30" y="20" width="50" height="50" stroke="#356687" fill="none"></rect>
+                    <g transform="translate(0,-952.36222)">
+                        <path d="m 56,963 c -102,122 6,9 7,9 17,-5 -66,69 -38,52 122,-77 -7,14 18,4 29,-11 45,-43 23,-4" stroke="royalblue" stroke-width="3" fill="none" class="path1"></path>
+                    </g>
+                </svg>
+                <span>{{ region.name }}</span>
+            </label>
 
+        </div>
+        {% endfor %}
     </div>
-    {% endfor %}
 </div>
 
 <button id="proceed-btn" class="order-summary-btn" hx-swap-oob="true">Proceed</button>
