added validation for hero filters form

--- a/_base/templates/home.html
+++ b/_base/templates/home.html
@@ -126,6 +126,7 @@
                 hx-swap="outerHTML"
                 type="button"
                 hx-include="input[name='room-type']:checked, #school-field, #min-price, #max-price, input[name='regions']:checked"
+                hx-on::before-request="validateAndProceed(event)"
                 >
                     Proceed
                 </button>
