designed about section

--- a/_base/core/static/core/styles/base.css
+++ b/_base/core/static/core/styles/base.css
@@ -3,6 +3,7 @@
 :root {
     /* color variables */
     --primaryGreen: #4ad66d;
+    --lightGreen: rgb(187, 252, 187);
     /* --primaryGreen: #68bb59; */
     --secondaryGreen: #427e38;
     --primaryWhite: white;
