edited about section

--- a/_base/templates/home.html
+++ b/_base/templates/home.html
@@ -150,7 +150,7 @@
     <article>
         <h3 class="green-accent">It's all about</h3>
 
-        <h2>Finding the <span class="purple-accent">student</span><br> <span class="powder-blue-accent">accommodation</span> of your <br>choice, seamlessly.</h2>
+        <h2>Finding the <span class="green">student</span><br> <span class="powder-blue-accent">accommodation</span> of your <br>choice, seamlessly.</h2>
 
         <p>We offer a seamless and stress-free solution for students seeking accommodation. With a focus on ease of use and trustworthiness, we ensure that every listing is legitimate, so students can find their perfect place quickly and confidently.</p>
     </article>
