--- a/_base/core/static/core/styles/nav.css
+++ b/_base/core/static/core/styles/nav.css
@@ -6,13 +6,14 @@
 
     padding: 1.5rem 1rem;
 
-    /* box-shadow: var(--grayBoxShadow); */
+    /* box-shadow: var(--slimBoxShadow); */
     position: sticky;
     top: 0;
 
-    background-color: rgba(255, 255, 255, 0.842);
-    -webkit-backdrop-filter: blur(12px);
-    backdrop-filter: blur(12px);
+    background-color: rgba(255, 255, 255, 0.5);
+    -webkit-backdrop-filter: blur(20px);
+    backdrop-filter: blur(20px);
+    /* border-bottom: 2px solid var(--lightGray); */
 }
 
 .nav-auth-container {
