added get started section

--- a/_base/core/static/core/styles/base.css
+++ b/_base/core/static/core/styles/base.css
@@ -4,6 +4,7 @@
     /* color variables */
     --primaryGreen: #4ad66d;
     --lightGreen: rgb(187, 252, 187);
+    --powderBlue: rgb(153, 230, 240);
     /* --primaryGreen: #68bb59; */
     --secondaryGreen: #427e38;
     --primaryWhite: white;
