centered footer text

--- a/_base/templates/home.html
+++ b/_base/templates/home.html
@@ -214,7 +214,7 @@
 <section id="feedback-section" class="feedback-section">
     <div class="section-heading">
         <h3>Can't find your school?</h3>
-        <a href="#">Tell us now</a>
+        <a href="https://forms.gle/mbD6PCPKDEXFxjDv5">Tell us now</a>
     </div>
     <div class="section-image"></div>
 </section>
