--- a/_base/core/static/core/styles/home/footer.css
+++ b/_base/core/static/core/styles/home/footer.css
@@ -3,6 +3,8 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 2rem 1rem;
+    padding: 1rem;
     font-weight: bold;
+    text-align: center;
+    font-size: .7rem;
 }
