--- a/_base/templates/home.html
+++ b/_base/templates/home.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="{% static 'core/styles/home/about.css' %}">
     <link rel="stylesheet" href="{% static 'core/styles/home/how-it-works.css' %}">
     <link rel="stylesheet" href="{% static 'core/styles/home/get-started.css' %}">
-    <link rel="stylesheet" href="{% static 'core/styles/home/feedback.css' %}">
-    <link rel="stylesheet" href="{% static 'core/styles/home/footer.css' %}?uuid={{uuid}}">
+    <link rel="stylesheet" href="{% static 'core/styles/home/feedback.css' %}?uuid={{uuid}}">
+    <link rel="stylesheet" href="{% static 'core/styles/home/footer.css' %}">
 
     <link rel="stylesheet" href="{% static 'core/styles/elements/zig-zag-checkbox.css' %}">
     <link rel="stylesheet" href="{% static 'core/styles/elements/button-one.css' %}">
@@ -214,7 +214,7 @@
 <section id="feedback-section" class="feedback-section">
     <div class="section-heading">
         <h3>Can't find your school?</h3>
-        <a href="https://forms.gle/mbD6PCPKDEXFxjDv5">Tell us now</a>
+        <a href="https://forms.gle/mbD6PCPKDEXFxjDv5">Let us know!</a>
     </div>
     <div class="section-image"></div>
 </section>
