--- a/_base/core/static/core/styles/nav.css
+++ b/_base/core/static/core/styles/nav.css
@@ -42,12 +42,12 @@ nav a {
     padding: .5rem;
     border-radius: var(--circularBorderRadius);
     box-shadow: var(--grayBoxShadow);
-    background-color: var(--backgroundGray);
-    color: var(--primaryBlue);
+    background-color: var(--slateGray);
+    color: var(--primaryWhite);
 }
 
 .nav-auth-container i:hover {
-    color: var(--primaryGreen);
+    color: var(--lightGreen);
 }
 
 #logo {
@@ -55,4 +55,5 @@ nav a {
     /* background-size: cover; */
     /* color: var(--primaryGreen); */
     font-weight: bold;
+    color: var(--primaryGreen);
 }
