--- a/_base/users/static/users/styles/users.css
+++ b/_base/users/static/users/styles/users.css
@@ -13,11 +13,10 @@ li {
 }
 
 .nav {
-    /* border-bottom: 2px solid var(--primaryGreen); */
+    border-bottom: 2px solid var(--lightGray);
     height: var(--navHeight);
     display: flex;
     align-items: center;
-    box-shadow: var(--mediumBoxShadow);
     padding: 0 1rem;
 }
 /* end element resets */
@@ -43,6 +42,24 @@ li {
     /* border-right: 3px solid var(--primaryGreen); */
 }
 
+.bio-container {
+    display: flex;
+    column-gap: .5rem;
+    align-items: center;
+}
+
+.bio-container > :first-child {
+    background-color: var(--slateGray);
+    color: var(--primaryWhite);
+    border-radius: var(--circularBorderRadius);
+    width: 2rem;
+    height: 2rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: .75rem;
+}
+
 #main {
     margin-left: 10rem;
     display: flex;
@@ -60,6 +77,14 @@ li {
     display: flex;
     align-items: center;
     column-gap: .5rem;
+    width: max-content;
+    padding: .5rem 1rem;
+    border-radius: .3rem;
+}
+
+.side-nav-links-container > a.active {
+    background-color: var(--backgroundGray);
+    /* width: max-content; */
 }
 
 
@@ -87,7 +112,7 @@ li {
 }
 
 h3 {
-    color: var(--primaryBlue);
+    /* color: var(--primaryBlue); */
 }
 
 
@@ -99,6 +124,7 @@ h3 {
     row-gap: 2rem;
     padding: 0 2rem;
     margin-left: auto;
+    border-left: 2px solid var(--lightGray);
 }
 
 .key-stats-container > h3 {
@@ -156,10 +182,17 @@ h3 {
 
 .logout-btn {
     align-self:flex-end;
-    background-color: var(--primaryBlue);
     color: var(--primaryWhite);
-    padding: .3rem 1rem;
+    padding: .5rem 1rem;
     border: none;
+    background-color: var(--black);
+    width: 100%;
+    border-radius: .3rem;
+}
+
+.logo-icon {
+    text-align: center;
+    color: var(--primaryGreen);
 }
 
 
@@ -197,10 +230,6 @@ h3 {
              -7px -7px 13px var(--primaryWhite);
 }
 
-
-.side-nav-links-container a {
-    color: royalblue;
-}
 
 .listings-card-container i {
     font-size: 1.2rem;
