--- a/_base/core/static/core/styles/home/hero.css
+++ b/_base/core/static/core/styles/home/hero.css
@@ -123,6 +123,8 @@
     z-index: var(--indexBehind);
     opacity: 0;
     display: grid;
+    max-height: 25rem;
+    overflow-y: auto;
 }
 
 .schools-dropdown.display {
